@@ -42,6 +42,8 @@ extern "C" {
 #define DFSCH_FIXNUM_TYPE ((dfsch_type_t*)&dfsch_fixnum_type)
   extern dfsch_number_type_t dfsch_flonum_type;
 #define DFSCH_FLONUM_TYPE ((dfsch_type_t*)&dfsch_flonum_type)
+  extern dfsch_number_type_t dfsch_bignum_type;
+#define DFSCH_BIGNUM_TYPE ((dfsch_type_t*)&dfsch_bignum_type)
 
   /** Makes number object from given floating-point number. */
   extern dfsch_object_t* dfsch_make_number_from_double(double n);
