@@ -878,5 +878,5 @@ void dfsch__native_register(dfsch_object_t *ctx){
   dfsch__weak_native_register(ctx);
   dfsch__format_native_register(ctx);
   dfsch__port_native_register(ctx);
-
+  dfsch__bignum_register(ctx);
 }
